# app_campze

./: .deployment  .gitignore  Dockerfile  README.md  app.py  auth.py  booking.py  config.py  deploy.sh  errors.py  extensions.py  forms.py  gunicorn.conf.py  models.py  organiser.py  parent.py  profiles.py  pyproject.toml  requirements.txt  routes.py  setup.py  startup.sh  startup.txt  startup_command.txt  tour_operator.py
.github/workflows/: main_app-campze.yml  python-app.yml
app/: __init__.py  config.py  routes.py
project-name/: pyproject.toml
static/css/: main.css
static/js/: google.js  main.js
templates/: base.html  landing.html  privacy.html  terms.html
templates/auth/: base_auth.html  forgot_password.html  login.html  resend_verification.html  reset_password.html  signup.html
templates/booking/: booking_confirmation.html  booking_form.html  checkout.html  payment.html
templates/dashboard/: change_password.html
templates/errors/: 400.html  401.html  403.html  404.html  500.html
templates/organiser/: banking.html  base.html  camps.html  create_camp.html  dashboard.html  messages.html  payouts.html  settings.html
templates/parent/: add_child.html  base.html  camps.html  children.html  dashboard.html  indemnity.html  messages.html  payments.html  settings.html  setup.html  setup_profile.html  statements.html
templates/tour_operator/: analytics.html  base.html  bookings.html  dashboard.html  package_form.html  packages.html  settings.html
tests/: test_app.py
