[tool.poetry]
name = "app_campze"
version = "0.1.0"
description = "Camp Management System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
Flask-SQLAlchemy = "^3.1.1"
Flask-Login = "^0.6.3"
Flask-WTF = "^1.2.1"
Flask-Mail = "^0.9.1"
Flask-Migrate = "^4.0.5"
Flask-CORS = "^4.0.0"
SQLAlchemy = "^2.0.23"
Werkzeug = "^3.0.1"
python-dotenv = "^1.0.0"
email-validator = "^2.1.0"
Pillow = "^10.0.0"
gunicorn = "^21.2.0"
celery = "^5.3.6"
redis = "^5.0.1"
paystack = "^1.5.0"
requests = "^2.31.0"
mysqlclient = "^2.2.4"
Flask-MySQLdb = "^2.0.0"
Flask-Bcrypt = "^1.0.1"
Flask-Caching = "^2.1.0"
Flask-Limiter = "^3.5.0"
flask-babel = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry.scripts]
start = "app:create_app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v" 